--- a/src/assets/css/views/login.css
+++ b/src/assets/css/views/login.css
@@ -1,7 +1,7 @@
 .bg-login {
     min-width: 450px;
-    background-image: url("../../img/bg-login.png");
-    /* background: var(--gradient-secondary); */
+    /* background-image: url("../../img/bg-login.png"); */
+    background: var(--gradient-secondary);
     border-radius: 16px 0 0 16px;
     box-shadow: var(--shadow-3);
     background-size: cover;
@@ -17,6 +17,10 @@
     position: relative;
     top: calc( 100% - 100px);
     left: calc( 100% - 180px);
+}
+
+.form-title--login {
+    text-align: left;
 }
 
 .login-form-container {
