--- a/src/assets/css/settings/colors.css
+++ b/src/assets/css/settings/colors.css
@@ -6,10 +6,12 @@
     --medium-primary: #3363ff;
     --dark-primary: #000a29;
     --ges-purple: #480d8c;
+    --ges-lighteen-purple: #f2e8fd;
     --ges-light-purple: #c9a2f6;
     --ges-medium-purple: #7816e9;
     --ges-dark-purple: #18042f;
     --ges-gray: #666666;
+    --ges-lighteen-gray: #F5F5F5;
     --ges-light-gray: #b3b3b3;
     --ges-dark-gray: #4d4d4d;
     --ges-red: #d50000;
