--- a/src/assets/css/html-elements/forms.css
+++ b/src/assets/css/html-elements/forms.css
@@ -16,25 +16,27 @@
 }
 
 .white-container,
-.form-container {
+.form-container,
+.global-form-container {
     background-color: white;
     border-radius: 0 16px 16px 0;
     box-shadow: var(--shadow-3);
     padding: 24px 32px;
 }
 
+.global-form-container {
+    border-radius: 8px;
+    padding: 16px;
+}
+
 .form-title,
 .input-container {
-    margin-bottom: 16px;
+    margin-bottom: 24px;
     width: 100%;
 }
 
-.form-title {
-    text-align: center;
-}
-
 .input-container__label {
-    font-weight: 300;
+    font-weight: 500;
     margin-bottom: 5px;
 }
 
@@ -42,6 +44,12 @@
     padding: 10px 12px;
     border-radius: 4px;
     border: 1px solid var(--ges-dark-gray);
+}
+
+.input-container__input:focus-visible {
+    outline: none;
+    border-color: var(--ges-medium-purple);
+    box-shadow: 0 0 3px 1px var(--ges-light-purple);
 }
 
 .bottom-actions {
@@ -61,6 +69,10 @@
     flex-wrap: wrap;
 }
 
+.register-form {
+    margin-bottom: 16px;
+}
+
 .register-form .input-container,
 .register-form .form-title,
 .form-container .header-back-button {
@@ -77,4 +89,21 @@
 
 .buttons-container button {
     margin: 16px 16px 5px 16px;
+}
+
+.double-input {
+    display: flex;
+}
+
+.double-input .input-container__input {
+    min-width: 150px;
+    max-width: 150px;
+}
+
+.double-input .input-container__input:first-child {
+    border-radius: 4px 0 0 4px;
+}
+
+.double-input .input-container__input:last-child {
+    border-radius: 0 4px 4px 0;
 }
