--- a/src/assets/css/views/common.css
+++ b/src/assets/css/views/common.css
@@ -1,3 +1,4 @@
 @import 'app.css';
 @import 'login.css';
-@import "application/common.css"
+@import "signup.css";
+@import "application/common.css";
