--- a/src/assets/css/html-elements/tables.css
+++ b/src/assets/css/html-elements/tables.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     border: 1px solid var(--ges-dark-gray);
+    margin-top: 24px;
 }
 
 .table__header {
@@ -20,6 +21,10 @@
     padding: 6px 10px;
 }
 
+.table__header-item {
+    white-space: nowrap;
+}
+
 .table__header-item:not(:first-child),
 .table__body-item:not(:first-child) {
     font-variant-numeric: slashed-zero;
@@ -27,4 +32,15 @@
 
 .table__body tr:last-child .table-indicator__body-item {
     border-bottom: none;
+}
+
+.table__body-item:last-child {
+    min-width: 100px;
+}
+
+@media screen and (max-width: 1000px) {
+    .scroll-table {
+        max-width: 900px;
+        overflow-x: auto;
+    }
 }
