--- a/src/assets/css/html-elements/forms.css
+++ b/src/assets/css/html-elements/forms.css
@@ -137,3 +137,26 @@
     max-width: 400px;
     min-width: 400px;
 }
+
+.user-profile-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-profile-form .input-container {
+    max-width: 400px;
+}
+
+.global-form-container--profile {
+    max-width: 500px;
+    padding: 32px;
+}
+
+.global-form-container--profile .user-profile-form .input-container {
+    max-width: none;
+    width: 100%;
+}
+
+.input-container-no-margin {
+    margin-bottom: 5px;
+}
