--- a/src/assets/css/settings/colors.css
+++ b/src/assets/css/settings/colors.css
@@ -2,6 +2,7 @@
     --gradient-primary: linear-gradient(150deg, #8E2DE2 0%, #4A00E0 74%);
     --gradient-secondary: linear-gradient(150deg, #0CEBEB 0%, #23e7b6 50%, #29FFC6 100%);
     --light-gradient: linear-gradient(90deg, #8DE7FF 0%, #B7FFF5 100%);
+    --red-gradient: linear-gradient(90deg, #d50000 0%, #600 100%);
     --primary: #00249b;
     --light-primary: #99b1ff;
     --medium-primary: #3363ff;
